syntax = "proto3";

option java_package = "com.ahappypie.marschat.grpc";
option java_outer_classname = "LightDelayProto";

service LightDelay {
    rpc GetLightDelay (LightDelayRequest) returns (LightDelayResponse) {}
}

message LightDelayRequest {
    uint64 timestamp = 1;
}

message LightDelayResponse {
    uint32 delay = 1;
}